// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConversationListBox component should render with custom props 1`] = `
<styled.div
  className="LT-ConversationListBox-Container"
>
  <Header
    className="LT-Header-Container"
    openMenu={null}
    person={Object {}}
    showMenuButton={false}
    showMinimizeButton={false}
    subtitle=""
    title="Tus conversaciones"
    toggleChat={null}
  />
  <ConversationList
    clickItem={[Function]}
    conversations={
      Array [
        Object {
          "client": Object {
            "avatar": "https://pbs.twimg.com/profile_images/718588760003383296/2AG8omMO_400x400.jpg",
            "name": "Georgia Harmon",
          },
          "last_message": Object {
            "content": "Lorem ipusum la la ejemplo largo",
            "created_at": "2017-11-20T09:43:57.000-0300",
          },
          "tags": Array [
            Object {
              "name": "SPU-CLAVE",
            },
          ],
        },
      ]
    }
    emptyStateText=""
    noMoreDataText=""
  />
  <Button
    className="LT-Button-Container"
    clickHandler={[Function]}
    disabled={false}
    type="submit"
    value=""
  />
</styled.div>
`;

exports[`ConversationListBox component should render with minimal props 1`] = `
<styled.div
  className="LT-ConversationListBox-Container"
>
  <Header
    className="LT-Header-Container"
    openMenu={null}
    person={Object {}}
    showMenuButton={false}
    showMinimizeButton={false}
    subtitle=""
    title=""
    toggleChat={null}
  />
  <ConversationList
    clickItem={null}
    conversations={
      Array [
        Object {
          "client": Object {
            "avatar": "https://pbs.twimg.com/profile_images/718588760003383296/2AG8omMO_400x400.jpg",
            "name": "Georgia Harmon",
          },
          "last_message": Object {
            "content": "Lorem ipusum la la ejemplo largo",
            "created_at": "2017-11-20T09:43:57.000-0300",
          },
          "tags": Array [
            Object {
              "name": "SPU-CLAVE",
            },
          ],
        },
      ]
    }
    emptyStateText=""
    noMoreDataText=""
  />
  <Button
    className="LT-Button-Container"
    clickHandler={[Function]}
    disabled={false}
    type="submit"
    value=""
  />
</styled.div>
`;
